--- a/templates/db.env.j2
+++ b/templates/db.env.j2
@@ -3,5 +3,5 @@
 POSTGRES_HOST=db
 POSTGRES_DB=nextcloud
 POSTGRES_USER=nextcloud
-POSTGRES_PASSWORD={{ nextcloud_mysql_password }}
+POSTGRES_PASSWORD={{ nextcloud_db_password }}
 MYSQL_ROOT_PASSWORD={{ nextcloud_mysql_root_password }}
