--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -18,13 +18,7 @@ services:
     volumes:
 #      - ./db:/var/lib/mysql
       - ./db:/var/lib/postgresql/data
-    env_file:
-      - db.env
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
+    env_file: .env
     networks:
       - internal
 
@@ -43,8 +37,7 @@ services:
       - ./apps:/var/www/html/custom_apps
       - ./config:/var/www/html/config
       - cifs-cloudstorage:/var/www/html/data:rw
-    env_file:
-      - db.env
+    env_file: .env
     environment:
       - POSTGRES_HOST=db
       - REDIS_HOST=redis
@@ -52,10 +45,6 @@ services:
       - APACHE_DISABLE_REWRITE_IP: true
       # set to reverse proxy IP address, i.e. caddy
       - TRUSTED_PROXIES: caddy
-      - POSTGRES_HOST: ${POSTGRES_HOST}
-      - POSTGRES_DB: ${POSTGRES_DB}
-      - POSTGRES_USER: ${POSTGRES_USER}
-      - POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - proxy_{{ nextcloud_container_name }}
       - internal
