--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -16,7 +16,6 @@ services:
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     volumes:
-#      - ./db:/var/lib/mysql
       - ./db:/var/lib/postgresql/data
     env_file: .env
     networks:
@@ -36,7 +35,7 @@ services:
       - ./nextcloud:/var/www/html
       - ./apps:/var/www/html/custom_apps
       - ./config:/var/www/html/config
-      - cifs-cloudstorage:/var/www/html/data:rw
+      - ./data:/var/www/html/data:rw
     env_file: .env
     environment:
       - POSTGRES_HOST=db
@@ -51,13 +50,6 @@ services:
     depends_on:
       - db
       - redis
-
-volumes:
-  cifs-cloudstorage:
-    driver_opts:
-      type: cifs
-      o: "username={{ nextcloud_cifs_user }},password={{ nextcloud_cifs_pass }},uid={{ nextcloud_cifs_uid }},gid={{ nextcloud_cifs_gid }},vers=3.0,rw"
-      device: "//{{ nas_ip_address }}/{{ nextcloud_cifs_share }}"
 
 networks:
   proxy_{{ nextcloud_container_name }}:
