--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -54,7 +54,7 @@ volumes:
   cifs-cloudstorage:
     driver_opts:
       type: cifs
-      o: "username={{ nextcloud_cifs_user }},password={{ nextcloud_cifs_pass }},uid={{ nextcloud_cifs_uid }},gid={{ nextcloud_cifs_gid }},vers=3.0,rw"
+      o: "username={{ nextcloud_cifs_user }},password={{ nextcloud_cifs_pass }},uid={{ nextcloud_cifs_uid }},gid={{ nextcloud_cifs_gid }},vers=3.0,rw,dir_mode=0770,file_mode=0600"
       device: "//{{ nas_ip_address }}/{{ nextcloud_cifs_share }}"
 
 networks:
