--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -12,7 +12,7 @@ services:
 
   # port 5432
   db:
-    image: postgres:latest
+    image: postgres:{{ nextcloud_db_postgres_version }}
     restart: always
     volumes:
       - ./db:/var/lib/postgresql/data
