--- a/templates/env.j2
+++ b/templates/env.j2
@@ -5,3 +5,9 @@ POSTGRES_DB=nextcloud
 POSTGRES_USER=nextcloud
 POSTGRES_PASSWORD={{ nextcloud_db_password }}
 
+CIFS_USER={{ nextcloud_cifs_user }}
+CIFS_PASS={{ nextcloud_cifs_pass }}
+CIFS_UID={{ nextcloud_cifs_uid }}
+CIFS_GID={{ nextcloud_cifs_gid }}
+CIFS_SHARE_IP={{ nas_ip_address }}
+CIFS_SHARE_NAME={{ nextcloud_cifs_share }}
