--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -52,6 +52,17 @@ services:
     depends_on:
       - db
       - redis
+    {% if nextcloud_use_traefik %}
+    labels:
+      - "traefik.enable={{ nextcloud_traefik_enabled }}"
+      - "traefik.docker.network=proxy_{{ nextcloud_container_name }}"
+      - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
+      - "traefik.http.services.nextcloud.loadbalancer.server.scheme=http"
+      - "traefik.http.routers.nextcloud.entrypoints=websecure"
+      - "traefik.http.routers.nextcloud.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
+      - "traefik.http.routers.nextcloud.tls=true"
+      - "traefik.http.routers.nextcloud.tls.certresolver={{ nextcloud_traefik_environment }}"
+    {% endif %}
 
   cron:
     image: nextcloud:24-apache
