--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -61,6 +61,12 @@ services:
       - "traefik.http.routers.nextcloud.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
       - "traefik.http.routers.nextcloud.tls=true"
       - "traefik.http.routers.nextcloud.tls.certresolver={{ nextcloud_traefik_tls_certresolver }}"
+      # enable service discovery through the reverse proxy
+      - "traefik.http.routers.nextcloud.middlewares=nextcloud_redirectregex"
+      - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.permanent=true"
+      - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/(?:card|cal)dav"
+      - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.replacement=https://$${1}/remote.php/dav"
+
 {% endif %}
 
   cron:
