rename router, add redirect for service discovery, add security headers

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -57,16 +57,24 @@ services:
       - "traefik.docker.network=proxy_{{ nextcloud_container_name }}"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
       - "traefik.http.services.nextcloud.loadbalancer.server.scheme=http"
-      - "traefik.http.routers.nextcloud.entrypoints=websecure"
-      - "traefik.http.routers.nextcloud.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
-      - "traefik.http.routers.nextcloud.tls=true"
-      - "traefik.http.routers.nextcloud.tls.certresolver={{ nextcloud_traefik_tls_certresolver }}"
+      - "traefik.http.routers.nextcloud-secure.entrypoints=websecure"
+      - "traefik.http.routers.nextcloud-secure.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
+      - "traefik.http.routers.nextcloud-secure.tls=true"
+      - "traefik.http.routers.nextcloud-secure.tls.certresolver={{ nextcloud_traefik_tls_certresolver }}"
+      - "traefik.http.routers.nextcloud-secure.middlewares=nextcloud_redirectregex,nextcloud_headers"
       # enable service discovery through the reverse proxy
-      - "traefik.http.routers.nextcloud.middlewares=nextcloud_redirectregex"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.permanent=true"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/(?:card|cal)dav"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.replacement=https://$${1}/remote.php/dav"
-
+      # HSTS
+      - "traefik.http.middlewares.nextcloud_headers.headers.stsSeconds=15552000"
+      - "traefik.http.middlewares.nextcloud_headers.headers.stsIncludeSubdomains=true"
+      - "traefik.http.middlewares.nextcloud_headers.headers.stsPreload=true"
+      - "traefik.http.middlewares.nextcloud_headers.headers.forceSTSHeader=true"
+      - "traefik.http.middlewares.nc-header.headers.referrerPolicy=no-referrer"
+      - "traefik.http.middlewares.nc-header.headers.browserXssFilter=true"
+      - "traefik.http.middlewares.nc-header.headers.customRequestHeaders.X-Forwarded-Proto=https"
+      - "traefik.http.routers.nextcloud-secure.middlewares=nextcloud-rep,nc-header"
 {% endif %}
 
   cron:
