--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -65,6 +65,8 @@ services:
       # enable service discovery through the reverse proxy
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.permanent=true"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/(?:card|cal)dav"
+      - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/webfinger"
+      - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/nodeinfo"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.replacement=https://$${1}/remote.php/dav"
       # HSTS
       - "traefik.http.middlewares.nextcloud_headers.headers.stsSeconds=15552000"
