--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -73,9 +73,11 @@ services:
       - "traefik.http.middlewares.nextcloud_headers.headers.stsIncludeSubdomains=true"
       - "traefik.http.middlewares.nextcloud_headers.headers.stsPreload=true"
       - "traefik.http.middlewares.nextcloud_headers.headers.forceSTSHeader=true"
-      - "traefik.http.middlewares.nc-header.headers.referrerPolicy=no-referrer"
-      - "traefik.http.middlewares.nc-header.headers.browserXssFilter=true"
-      - "traefik.http.middlewares.nc-header.headers.customRequestHeaders.X-Forwarded-Proto=https"
+      - "traefik.http.middlewares.nextcloud_headers.headers.referrerPolicy=no-referrer"
+      - "traefik.http.middlewares.nextcloud_headers.headers.browserXssFilter=true"
+      - "traefik.http.middlewares.nextcloud_headers.headers.contentSecurityPolicy=default-src"
+      - "traefik.http.middlewares.nextcloud_headers.headers.customRequestHeaders.X-Forwarded-Proto=https"
+      
 {% endif %}
 
   cron:
