--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -57,11 +57,11 @@ services:
       - "traefik.docker.network=proxy_{{ nextcloud_container_name }}"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
       - "traefik.http.services.nextcloud.loadbalancer.server.scheme=http"
-      - "traefik.http.routers.nextcloud-secure.entrypoints=websecure"
-      - "traefik.http.routers.nextcloud-secure.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
-      - "traefik.http.routers.nextcloud-secure.tls=true"
-      - "traefik.http.routers.nextcloud-secure.tls.certresolver={{ nextcloud_traefik_tls_certresolver }}"
-      - "traefik.http.routers.nextcloud-secure.middlewares=nextcloud_redirectregex,nextcloud_headers"
+      - "traefik.http.routers.nextcloud.entrypoints=websecure"
+      - "traefik.http.routers.nextcloud.rule=Host(`{{ nextcloud_container_name }}.{{ nextcloud_domain }}`)"
+      - "traefik.http.routers.nextcloud.tls=true"
+      - "traefik.http.routers.nextcloud.tls.certresolver={{ nextcloud_traefik_tls_certresolver }}"
+      - "traefik.http.routers.nextcloud.middlewares=nextcloud_redirectregex,nextcloud_headers"
       # enable service discovery through the reverse proxy
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.permanent=true"
       - "traefik.http.middlewares.nextcloud_redirectregex.redirectregex.regex=https://(.*)/.well-known/(?:card|cal)dav"
@@ -80,7 +80,6 @@ services:
       - "traefik.http.middlewares.nextcloud_headers.headers.customRequestHeaders.X-Forwarded-Proto=https"
       - "traefik.http.middlewares.nextcloud_headers.headers.customResponseHeaders.X-Robots-Tag=noindex,nofollow"
       # - "traefik.http.middlewares.nextcloud_headers.headers.contentSecurityPolicy=default-src"
-      
 {% endif %}
 
   cron:
