add cifs storage to db container

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -18,6 +18,7 @@ services:
     restart: always
     volumes:
       - ./db:/var/lib/postgresql/data
+      - cifs-cloudstorage:/cifs_storage
     env_file: .env
     networks:
       - internal
