--- a/templates/create_db_dump.sh.j2
+++ b/templates/create_db_dump.sh.j2
@@ -1,8 +1,9 @@
 #/bin/bash
-
+MONITOR_URL='https://cronitor.link/p/{{ nextcloud_cronitor_id }}'
 PGPASSWORD={{ nextcloud_db_password }}
 now=$(date +"%Y-%m-%dT%H-%M-%S%z")
 
+curl $MONITOR_URL?state=run
 docker exec -u www-data {{ nextcloud_container_name }} php occ maintenance:mode --on
 
 docker exec -i {{ nextcloud_db_container_name }} \
@@ -11,4 +12,7 @@ docker exec -i {{ nextcloud_db_container_name }} \
     --dbname {{ nextcloud_db_database }} \
     --file /cifs_storage/backups/$now.sql"
 
+sleep 5;
+
 docker exec -u www-data nextcloud php occ maintenance:mode --off
+curl $MONITOR_URL?state=complete
