--- a/templates/env.j2
+++ b/templates/env.j2
@@ -11,3 +11,15 @@ CIFS_UID={{ nextcloud_cifs_uid }}
 CIFS_GID={{ nextcloud_cifs_gid }}
 CIFS_SHARE_IP={{ nas_ip_address }}
 CIFS_SHARE_NAME={{ nextcloud_cifs_share }}
+
+{% if nextcloud_s3_enable %}
+# S3
+S3_ACCESS_KEY={{ nextcloud_s3_access_key }}
+S3_SECRET_KEY={{ nextcloud_s3_secret_key }}
+S3_BUCKETNAME={{ nextcloud_s3_bucketname }}
+S3_AUTOCREATE={{ nextcloud_s3_autocreate }}
+S3_HOST={{ nextcloud_s3_host }}
+S3_PORT={{ nextcloud_s3_port }}
+S3_USE_PATH_STYLE={{ nextcloud_s3_use_path_style }}
+S3_USE_SSL={{ nextcloud_s3_use_ssl }}
+{% endif %}
