fix wrong env var names

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -50,14 +50,16 @@ services:
       - NEXTCLOUD_TRUSTED_DOMAINS={{ nextcloud_trusted_domains }}
       - OVERWRITEPROTOCOL=https
 {% if nextcloud_s3_enable %}
-      - S3_ACCESS_KEY
-      - S3_SECRET_KEY
-      - S3_BUCKETNAME
-      - S3_AUTOCREATE
-      - S3_HOST
-      - S3_PORT
-      - S3_USE_PATH_STYLE
-      - S3_USE_SSL
+      - OBJECTSTORE_S3_KEY
+      - OBJECTSTORE_S3_SECRET
+      - OBJECTSTORE_S3_BUCKET
+      - OBJECTSTORE_S3_AUTOCREATE
+      - OBJECTSTORE_S3_HOST
+      - OBJECTSTORE_S3_PORT
+      - OBJECTSTORE_S3_USEPATH_STYLE
+      - OBJECTSTORE_S3_SSL
+      - OBJECTSTORE_S3_REGION
+      
 {% endifif %}
     networks:
       - proxy_{{ nextcloud_container_name }}
