--- a/templates/env.j2
+++ b/templates/env.j2
@@ -14,12 +14,13 @@ CIFS_SHARE_NAME={{ nextcloud_cifs_share }}
 
 {% if nextcloud_s3_enable %}
 # S3
-S3_ACCESS_KEY={{ nextcloud_s3_access_key }}
-S3_SECRET_KEY={{ nextcloud_s3_secret_key }}
-S3_BUCKETNAME={{ nextcloud_s3_bucketname }}
-S3_AUTOCREATE={{ nextcloud_s3_autocreate }}
-S3_HOST={{ nextcloud_s3_host }}
-S3_PORT={{ nextcloud_s3_port }}
-S3_USE_PATH_STYLE={{ nextcloud_s3_use_path_style }}
-S3_USE_SSL={{ nextcloud_s3_use_ssl }}
+OBJECTSTORE_S3_KEY={{ nextcloud_s3_access_key }}
+OBJECTSTORE_S3_SECRET={{ nextcloud_s3_secret_key }}
+OBJECTSTORE_S3_BUCKET={{ nextcloud_s3_bucketname }}
+OBJECTSTORE_S3_AUTOCREATE={{ nextcloud_s3_autocreate }}
+OBJECTSTORE_S3_HOST={{ nextcloud_s3_host }}
+OBJECTSTORE_S3_PORT={{ nextcloud_s3_port }}
+OBJECTSTORE_S3_USEPATH_STYLE={{ nextcloud_s3_use_path_style }}
+OBJECTSTORE_S3_SSL={{ nextcloud_s3_use_ssl }}
+OBJECTSTORE_S3_REGION= {{ nextcloud_s3_region }}
 {% endif %}
