--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -60,7 +60,7 @@ services:
       - OBJECTSTORE_S3_SSL
       - OBJECTSTORE_S3_REGION
       
-{% endifif %}
+{% endif %}
     networks:
       - proxy_{{ nextcloud_container_name }}
       - internet
