--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,5 +1,7 @@
 # {{ansible_managed}}
 
+NEXTCLOUD_APP_VERSION={{ nextcloud_app_version }}
+
 POSTGRES_HOST=db
 POSTGRES_DB=nextcloud
 POSTGRES_USER=nextcloud
