--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -5,7 +5,7 @@ services:
   redis:
     image: redis:{{ nextcloud_redis_version }}-alpine
     container_name: {{ nextcloud_redis_container_name }}
-    restart: always
+    restart: unless-stopped
     networks:
       - internal
 
@@ -13,7 +13,7 @@ services:
   db:
     image: postgres:{{ nextcloud_postgres_version }}-alpine
     container_name: {{ nextcloud_db_container_name }}
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./db:/var/lib/postgresql/data
       - cifs-cloudstorage:/cifs_storage
@@ -25,7 +25,7 @@ services:
     image: nextcloud:${ NEXTCLOUD_APP_VERSION }-apache
     hostname: nextcloud
     container_name: {{ nextcloud_container_name }}
-    restart: always
+    restart: unless-stopped
     mem_limit: 2048m
     mem_reservation: 512m
     expose:
